# sonda

./: CMakeLists.txt  CMakePresets.json  _clang-format
.github/workflows/: linux.yml  macos.yml  windows_ci.yml
src/: CMakeLists.txt  bytes.h  endian.h  fmap.h  glfw_vulkan.h  gui.cpp  gui.h  logger.h  main.cpp  mqtt.h  strong_type.h  tiff.h  widgets.h
test/: CMakeLists.txt  main.cpp
